<resources>
    <string name="app_name">Note Apps</string>
    <string name="action_submit">Submit</string>
    <string name="label_title">Title</string>
    <string name="hint_title">Input Title</string>
    <string name="label_description">Description</string>
    <string name="hint_description">Input Description</string>
    <string name="title_form">Save Your Daily Notes</string>
    <string name="msg_empty_notes">Empty Notes</string>
    <string name="msg_error_title_required">Title is required</string>
    <string name="msg_error_description_required">Description is required</string>
    <string name="action_add_note">Add Note</string>
    <string name="action_delete">Delete</string>
    <string name="msg_success_note_inserted">Note success inserted</string>
    <string name="msg_success_note_deleted">Note success deleted</string>
    <string name="msg_success_updated">Note success updated</string>
    <string name="action_update">Update</string>
    <string name="action_search">Search</string>
    <string name="hint_search_text">Enter your search query</string>
    <string name="action_select_notes">Select Notes</string>
    <string name="msg_note_is_empty">Note is empty</string>
</resources>